test/test_cases/invalid/syntaxErr/variables/reservedWords5.wacc
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  bool ord = true
end
